# ExplorerPro

./: .gitignore  ARCHITEKTUR.md  AUFGABEN.txt  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  EXPORTFORMAT.md  ExplorerPro.spec  LICENSE  PORTIERUNGSPLAN.md  PRIVACY_POLICY.md  README.md  README_de.md  ROADMAP.md  START_ExplorerPro.bat  STORE_LISTING.md  SUITE_EXPLORERPRO_TEMPLATE.md  SUPPORT.md  THIRD_PARTY_LICENSES.txt  WINDOWS_STORE_PREP.md  build_exe.bat  generate_store_screenshots.py  llms.txt  pyproject.toml  requirements.txt  store_package.json  translator.py
.github/workflows/: tests.yml  (+1 more)
_sources/: CROSSCHECK.md
locales/: translations.json
src/: __init__.py  app.py  main.py  run_test.bat  test_bug.py
tests/: source_platform_smoke.py  test_advanced_search_dialog.py  test_app_close_event.py  test_app_close_search_worker.py  test_blacklist_manager_fixes.py  test_duplicate_finder.py  test_duplicate_finder_checkbox.py  test_event_bus_apps_fixes.py  test_export_service.py  test_file_browser.py  test_file_icon_helper.py  test_file_index_fitz_leak.py  test_file_index_fts5.py  test_main_window_panel_switch.py  test_panel_save_oserror.py  test_platform_utils.py  test_preview_fitz_leak.py  test_privacy_whitelist_fix.py  test_quick_editor_close_event.py  test_release_smoke.py  test_search_panel.py  test_search_panel_filename.py  test_shortcut_preview.py  test_sidebar_accessibility.py  test_sidebar_oserror.py  test_store_materials.py  test_store_screenshots.py  test_sync_manager_button_race.py  test_sync_manager_save_oserror.py  test_syntax_highlighter.py  test_xlsx_preview.py
(+36 files in other folders)
