[project]
name = "explorer-pro-suite"
version = "1.0.0"
description = "Datei-Explorer-Suite mit Editor, PDF-Viewer und Datenanalyse"
authors = [{ name = "Lukas Geiger", email = "lukasgeiger@googlemail.com" }]
requires-python = ">=3.10"
license = { file = "LICENSE" }
readme = "README.md"

dependencies = [
    "PySide6>=6.5.0,<7.0.0",
    "QScintilla>=2.13.0,<3.0.0",
    "PyMuPDF>=1.21.0,<2.0.0",
    "watchdog>=3.0.0,<5.0.0",
    "pandas>=2.0.0,<3.0.0",
    "openpyxl>=3.1.0,<4.0.0",
    "Pygments>=2.20.0,<3.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.5"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100
